Agregar failsave de geolocalizacion y unificacion de JS

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 <body>
 	<header>
 		<span id="Clock" class="Clock" onload="showTime()"></span>
-		<script src="js/clock.js"></script> <!-- Ejecuta el reloj -->
 		<span id="currentTemp" class="currentTemp" onload="refreshTemp()"></span>
 		<span id="maxTemp" class="limitTemps" onload="refreshTemp()"></span>
 		<span id="minTemp" class="limitTemps" onload="refreshTemp()"></span>
-		<script src="js/weather.js"></script>
+		<script src="js/worksc.js"></script> <!-- Carga Script de funcionalidades -->
 
 </body>
 </html>
