Coordenadas reescritas y inicio de lectura de JSON

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<span id="Clock" class="Clock" onload="showTime()"></span>
-		<span id="currentTemp" class="currentTemp" onload="refreshTemp()"></span>
+		<span id="curTemp" class="currentTemp" onload="refreshTemp()"></span>
 		<span id="maxTemp" class="limitTemps" onload="refreshTemp()"></span>
 		<span id="minTemp" class="limitTemps" onload="refreshTemp()"></span>
 		<script src="js/worksc.js"></script> <!-- Carga Script de funcionalidades -->
