Reestructuracion de JS - Implementacion de jQuery

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 		<span id="curTemp" class="currentTemp" onload="refreshTemp()"></span>
 		<span id="maxTemp" class="limitTemps" onload="refreshTemp()"></span>
 		<span id="minTemp" class="limitTemps" onload="refreshTemp()"></span>
-		<script src="js/worksc.js"></script> <!-- Carga Script de funcionalidades -->
+	</header>
+	<footer>
+		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script> <!-- jQuery es cargado -->
+		<script src="js/main.js"></script> <!-- Carga Script de funcionalidades -->
 
+	</footer>
 </body>
 </html>
