Header arreglado, funcion de fecha anadido

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 			<span id="curTemp" class="colorBlanco" onload="refreshTemp()">31°C</span>
 		</article>
 		<article id="artTemps">
-			<span id="maxTemp" class="colorBlanco letraMediana limitTemps" onload="refreshTemp()">37°C</span> <br>
-			<span id="minTemp" class="colorBlanco letraMediana limitTemps" onload="refreshTemp()">25°C</span>
+			<span id="maxTemp" class="colorBlanco letraMediana limitTemps" onload="refreshTemp()">37°C Max</span> <br>
+			<span id="minTemp" class="colorBlanco letraMediana limitTemps" onload="refreshTemp()">25°C Min</span>
 		</article>
 	</header>
 	<iframe id="searchBox" src="https://duckduckgo.com/search.html?width=450&duck=yes&prefill=HI JK" frameborder="0"></iframe>
 	<footer>
 		<span id="textConnection" onload="testConn()">Connected to Internet</span>
-		<!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
-		<script src="js/main.js"></script> -->
+		<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+		<script src="js/main.js"></script>
 	</footer>
 </body>
 </html>
